# QuickFace

./: .gitignore  COMPARISON_ANALYSIS.md  FIXES_AND_R2_GUIDE.md  ISSUE_RESOLUTION_SUMMARY.md  PROJECT_ANALYSIS.md  README.md  TECHNICAL_ANALYSIS.md  backend.Dockerfile  frontend.Dockerfile  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/app/: celery_app.py  cleanup.py  config.py  dependencies.py  logging_config.py  main.py  models.py  rate_limiting.py  schemas.py  tasks.py
backend/app/face/: processor.py
backend/app/routes/: __init__.py  event.py  search.py  upload.py
backend/app/storage/: base.py  minio_backend.py  r2_backend.py
deploy/: docker-compose.yml
deploy/db/: init.sql
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(public)/events/[eventId]/search/: page.tsx
frontend/app/(studio)/dashboard/events/: page.tsx
