[project]
name = "quickface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "face-recognition>=1.3.0",
    "fastapi>=0.135.2",
    "boto3>=1.35.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "qrcode[pil]>=8.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "slowapi>=0.1.9",
    "python-json-logger>=3.0.1",
]

